// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
<div>
  <div
    class="sc-gsnTZi fIFSDC"
  >
    <div
      class="sc-bczRLJ jYnuLy"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background light 1`] = `
<div>
  <div
    class="sc-gsnTZi CVtjE"
  >
    <div
      class="sc-bczRLJ jYnuLy"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;
